--- a/public/css/Free_Resources.css
+++ b/public/css/Free_Resources.css
@@ -3,7 +3,7 @@ p{
 }
 
 .content-section:hover {
-  background-image: url("/assets/images/free\ resource.jpg");
+  background-image: url("../images/free resource.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,7 +13,7 @@ p{
   filter: brightness(100%);
 }
 .content-section {
-  background-image: url("/assets/images/free\ resource.jpg");
+  background-image: url("../images/free resource.jpg");
   background-color: rgba(0, 0, 0, 0.525);
   background-blend-mode: multiply;
   background-position: center center;
