--- a/src/Pages/Account/login.css
+++ b/src/Pages/Account/login.css
@@ -28,24 +28,24 @@
   -webkit-backdrop-filter: blur(8px);
 }
 
-form {
+.signin form {
   display: flex;
   flex-direction: column;
 }
 
-h2 {
+.signin h2 {
   font-size: 2rem;
   margin-bottom: 20px;
   color: black;
 }
 
-.input-field {
+.signin .input-field {
   position: relative;
   border-bottom: 2px solid black;
   margin: 15px 0;
 }
 
-.input-field label {
+.signin .input-field label {
   position: absolute;
   top: 50%;
   left: 0;
@@ -56,7 +56,7 @@ h2 {
   transition: 0.15s ease;
 }
 
-.input-field input {
+.signin .input-field input {
   width: 100%;
   height: 30px;
   background: transparent;
@@ -66,14 +66,14 @@ h2 {
   color: black;
 }
 
-.input-field input:focus~label,
-.input-field input:valid~label {
+.signin .input-field input:focus~label,
+.signin .input-field input:valid~label {
   font-size: 0.8rem;
   top: 10px;
   transform: translateY(-120%);
 }
 
-.forget {
+.signin .forget {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -81,29 +81,29 @@ h2 {
   color: black;
 }
 
-#remember {
+.signin #remember {
   accent-color: black;
 }
 
-.forget label {
+.signin .forget label {
   display: flex;
   align-items: center;
 }
 
-.forget label p {
+.signin .forget label p {
   margin-left: 8px;
   margin-bottom: 0;
 }
-.forget a{
+.signin .forget a{
   font-size: 13px;
 }
 
-.wrapper a {
+.signin .wrapper a {
   color: black;
   text-decoration: none;
 }
 
-.wrapper a:hover {
+.signin .wrapper a:hover {
   text-decoration: underline;
 }
 
@@ -126,7 +126,7 @@ h2 {
   transform: scale(0.95);
 }
 
-.register {
+.signin .register {
   text-align: end;
   margin-top: 10px;
   color: black;
