--- a/src/Pages/LandingPage/landingpage.css
+++ b/src/Pages/LandingPage/landingpage.css
@@ -17,6 +17,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 .main-banner .button-container  button{
     background-color: #1b18ab;
