--- a/src/Pages/LandingPage/landingpage.css
+++ b/src/Pages/LandingPage/landingpage.css
@@ -7,6 +7,7 @@
     width: auto;
     background-position: top;
     background-repeat: no-repeat;
+    /* background-attachment: fixed; */
     background-size: cover;
     opacity: 0.9;
 
@@ -14,7 +15,7 @@
 
 @media (max-width:450px){
 .main-banner{
-    height: 100vh !important;
+    height: 89vh !important;
 }
 }
  .button-container{
